# qinstrument

./: CMakeLists.txt  Makefile  README.md
cmake/: GaugeQtConfig.cmake.in
docs/: implementation.md
examples/dashboard/: CMakeLists.txt  main.cpp
include/GaugeQt/: GaugeQt  gaugebackground.h  gaugeneedle.h  gaugeqt_global.h  gaugescale.h  gaugewidget.h  gaugezone.h  radialgauge.h  speedometer.h
src/: CMakeLists.txt
src/core/: gaugebackground.cpp  gaugeneedle.cpp  gaugescale.cpp  gaugewidget.cpp  gaugezone.cpp
src/gauges/: radialgauge.cpp  speedometer.cpp
src/util/: gaugemath.h
